change .calendar spacing issue
margin-top/bottom now 0.25em

--- a/digital_induction.css
+++ b/digital_induction.css
@@ -108,7 +108,7 @@ div.btn-group * i.fa-check {
 .btn-group * a {margin-left: 5px;}
 
 .calendar {
-    margin: 1.0em 0;
+    margin: 0.25em 0;
 }
 
 /* to add list filter functionality */
